Fixed Result file list text alignment issue

--- a/src/styles.css
+++ b/src/styles.css
@@ -120,6 +120,7 @@
 
 .result-list {
   margin-bottom: 2.5em;
+  text-align: left;
 }
 
 .result-header-list {
